cleanup root folder

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -80,7 +80,7 @@ body {
 .statusBar {
   padding-top: 1vh;
   height: 5vh;
-  background-color: black;
+  background-color: #343a40;
   color: white;
 }
 
