add bootstramp styling

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,6 +20,7 @@ body {
   background-color: #e73f3f;
 }
 
+/* PlayerProfile.jsx */
 .playerWrapper {
   height: 50vh;
   width: 50vw;
@@ -59,6 +60,8 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+/* MyProfile.jsx */
 
 // --------------------
 // Style for App component
