--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -190,3 +190,98 @@ body {
     }
   }
 }
+.gameWrapper {
+  background-color: red;
+  width: 100vw;
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.viewport {
+  display: flex;
+  background-color: blue;
+  width: 100%;
+  height: 20vh;
+}
+
+.columns {
+  height: 10vh;
+  width: 100vw;
+  background-size: 100% 100%;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+
+  &.columns-top {
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-top.svg");
+  }
+
+  &.columns-center {
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-center.svg");
+  }
+
+  &.columns-bottom {
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-bottom.svg");
+  }
+
+  &:after {
+    content: "";
+    display: block;
+    padding-top: 12.07%;
+  }
+}
+
+@keyframes ltr-transition-0 {
+  0% {
+    background-position: 0vw;
+  }
+  100% {
+    background-position: 33.3333vw;
+  }
+}
+
+@keyframes ltr-transition-1 {
+  0% {
+    background-position: 33.3333vw;
+  }
+  100% {
+    background-position: 66.6666vw;
+  }
+}
+
+@keyframes ltr-transition-2 {
+  0% {
+    background-position: 66.6666vw;
+  }
+  100% {
+    background-position: 100vw;
+  }
+}
+
+@keyframes rtl-transition-0 {
+  0% {
+    background-position: -33.3333vw;
+  }
+  100% {
+    background-position: -66.6666vw;
+  }
+}
+
+@keyframes rtl-transition-1 {
+  0% {
+    background-position: -100vw;
+  }
+  100% {
+    background-position: -133.3333vw;
+  }
+}
+
+@keyframes rtl-transition-2 {
+  0% {
+    background-position: -166.6666vw;
+  }
+  100% {
+    background-position: -200vw;
+  }
+}
