--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -67,14 +67,14 @@ body {
 // Style for App component
 .App {
   text-align: center;
-
+  background-color: black;
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
   }
 
   .App-header {
-    background-color: black;
+    
     padding: 20px;
     color: white;
 
@@ -288,4 +288,17 @@ body {
 
 #freeRegister{
   color:#FFCC00
+}
+
+.avatarSelectImages{
+  width:90px;
+  height:110px
+}
+
+
+#navbarReplacer{
+    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+    width: 100%;
+    height:30vh
 }
