--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,12 @@
 // --------------------
 // Style reusable for all components
-html{
-  background-color:black
+html {
+  background-color: black;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto Mono", monospace;
 }
 
 // for the state.message
@@ -72,13 +71,13 @@ body {
 .App {
   text-align: center;
   background-color: black;
+
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
   }
 
   .App-header {
-    
     padding: 20px;
     color: white;
 
@@ -153,7 +152,7 @@ body {
 }
 
 .terminalFont {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   text-align: left;
   margin-left: 4px;
   margin-top: 4px;
@@ -218,19 +217,19 @@ body {
   animation-fill-mode: forwards;
 
   &.columns-top {
-    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-top.svg");
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-top.svg');
   }
 
   &.columns-center {
-    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-center.svg");
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-center.svg');
   }
 
   &.columns-bottom {
-    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-bottom.svg");
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/233661/mario-bottom.svg');
   }
 
   &:after {
-    content: "";
+    content: '';
     display: block;
     padding-top: 12.07%;
   }
@@ -290,24 +289,41 @@ body {
   }
 }
 
-#freeRegister{
-  color:#FFCC00
+#freeRegister {
+  color: #ffcc00;
 }
 
-.avatarSelectImages{
-  width:115px;
-  height:130px;
+.avatarSelectImages {
+  width: 115px;
+  height: 130px;
   cursor: pointer;
-  
 }
-.active{
-  border-bottom:red 5px solid
+.active {
+  border-bottom: red 5px solid;
 }
 
+#navbarReplacer {
+  -webkit-mask-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(0, 0, 0, 1)),
+    to(rgba(0, 0, 0, 0))
+  );
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  width: 100%;
+  height: 30vh;
+}
 
-#navbarReplacer{
-    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-    width: 100%;
-    height:30vh
+.myprofile-statpoint {
+  border: 2px solid black;
+}
+
+/* Shows which stat the user can upgrade when hovering */
+.myprofile-statpoint-displayer {
+  border: 2px solid green;
+}
+/* feedback to user when clicking progressbar */
+.myprofile-statpoints-displayer-blink {
+  border: 4px solid greenyellow;
 }
