Add new styling neon glow

--- a/client/src/components/pages/crimes/petty/pettyStyling.scss
+++ b/client/src/components/pages/crimes/petty/pettyStyling.scss
@@ -20,7 +20,7 @@
 
 .result-wrapper {
   width: 100%;
-  border: 1px solid red;
+  border-bottom: 1px solid #ff8a9d;
   padding: 5px;
   margin: 5px;
 
