--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,6 +3,9 @@
 html {
   background-color: #050505;
 }
+* {
+  font-family: "Courier New", Courier, monospace;
+}
 
 body {
   margin: 0;
@@ -52,17 +55,28 @@ body {
 }
 
 .crimeTerminalWrapper {
-  color: white;
   background-color: black;
-  width: 50vw; // 25% of the screen (half of the half)
-  height: 100vh;
-  border-color: gray;
+  border-top: #08fe00 12px solid;
+  border-left: #08fe00 1px solid;
+  border-right: #08fe00 1px solid;
+  border-bottom: #08fe00 3px solid;
 }
 
 .statusBar {
   height: 5vh;
   background-color: #32334a;
   color: white;
+}
+
+.dropdown-item {
+  color: #e4e2ff !important;
+}
+.nav-link {
+  color: #e4e2ff !important;
+}
+
+.dropdown-menu {
+  border: 1px #fbac73 solid !important;
 }
 
 .hackerGreen {
