--- a/client/src/components/pages/cryptoCurrency/cryptoStyle.scss
+++ b/client/src/components/pages/cryptoCurrency/cryptoStyle.scss
@@ -1,10 +1,12 @@
 .chartsRow {
-  display: flex;
-  justify-content: center;
+  display:flex;
+  justify-content:"center";
   height: 100%;
   width: 100%;
+  
   .chartContainer {
-    width: 33vw;
+    
+    width: 100%;
     height: 40vh;
   }
 }
