--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,11 +11,14 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
+  background-image: linear-gradient(to top, #161411, #0c0d16);
+  /* max-width: 100% !important;
+  overflow-x: hidden !important; */
 }
 
 .globalMessage {
   min-height: 4vh;
-  width: 50%;
+  width: 45%;
   margin: auto;
   color: #06a308;
 }
@@ -37,26 +40,9 @@ body {
 // Style for App component
 .App {
   text-align: center;
-  background-color: #050505;
+  //background-color: #050505;
 }
 
-.statusBar {
-  height: 4vh;
-  background-color: #32334a;
-  color: white;
-  
-}
-
-.dropdown-item {
-  color: #e4e2ff !important;
-}
-.nav-link {
-  color: #e4e2ff !important;
-}
-
-.dropdown-menu {
-  border: 1px #fbac73 solid !important;
-}
 
 .hackerGreen {
   background-color: #148e56 !important;
@@ -69,6 +55,10 @@ body {
 }
 .hackerRed {
   background-color: #ff8a9d !important;
+}
+
+.bitcoinColor{
+  color: #F08F18
 }
 
 .terminalFont {
@@ -179,4 +169,14 @@ body {
   box-sizing: content-box;
   border: solid salmon 2px;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+    .display-none-when-mobile{
+        display:none !important;
+    }
+    .globalMessage{
+      width: 95%;
+      font-size: smaller;
+    }
 }
