--- a/client/src/components/pages/crimes/petty/pettyStyling.scss
+++ b/client/src/components/pages/crimes/petty/pettyStyling.scss
@@ -1,6 +1,4 @@
 
-.terminal {
-  width: 50%;
 
   .terminal-font {
     font-family: "Roboto Mono", monospace;
@@ -8,11 +6,6 @@
     margin-left: 4px;
     margin-top: 4px;
   }
-}
-
-.result-list {
-  width: 50%;
-}
 
 .result-wrapper {
   width: 100%;
@@ -49,6 +42,27 @@
     p {
       width: 100%;
       margin-bottom: 0%;
+    }
+  }
+}
+
+
+.petty-page-container {
+  margin: 0 auto;
+  margin-top: 3%;
+  height: 100%;
+  min-height: 60vh;
+
+  .content {
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 3%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .petty-page-container {
+    .content{
+      width:100%
     }
   }
 }
