--- a/client/src/components/pages/cryptoCurrency/cryptoStyle.scss
+++ b/client/src/components/pages/cryptoCurrency/cryptoStyle.scss
@@ -1,12 +1,32 @@
+.crypto-page-container {
+  margin: 0 auto;
+  margin-top: 3%;
+  height: 100%;
+  min-height: 60vh;
+
+  .crypto-table {
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 3%;
+  }
+}
+
 .chartsRow {
-  display:flex;
-  justify-content:"center";
+  display: flex;
+  justify-content: "center";
   height: 100%;
   width: 100%;
-  
+
   .chartContainer {
-    
     width: 100%;
     height: 40vh;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .crypto-page-container {
+    .crypto-table {
+      width: 100%;
+    }
   }
 }
