--- a/client/src/pages/screens/_molecules/betaForum.scss
+++ b/client/src/pages/screens/_molecules/betaForum.scss
@@ -52,9 +52,9 @@
     height: auto;
   }
 }
-.commentInfoBottom {
+.bottomActions {
   display: flex;
-  justify-content: space-between;
+  
   align-items: center;
   max-height: 15%;
   min-height: 10%;
@@ -66,6 +66,9 @@
     height: auto;
   }
   .likeInformation {
+    padding-left: 1vmin;
+  }
+  .deleteButton {
     padding-left: 1vmin;
   }
   .lastUpdate {
